[gd_scene load_steps=28 format=2]

[ext_resource path="res://graphics/characters/playerIdleSpriteSheet.png" type="Texture" id=1]
[ext_resource path="res://graphics/characters/playerRunSpriteSheet.png" type="Texture" id=2]
[ext_resource path="res://Player/Player.gd" type="Script" id=3]
[ext_resource path="res://Weapons/Axe.tscn" type="PackedScene" id=4]
[ext_resource path="res://Weapons/Knife.tscn" type="PackedScene" id=5]
[ext_resource path="res://audio/mixkit-footsteps-on-heels-on-the-pavement-542-[AudioTrimmer.com].wav" type="AudioStream" id=6]
[ext_resource path="res://graphics/shadows/LargeShadow.png" type="Texture" id=7]
[ext_resource path="res://audio/Laugh.mp3" type="AudioStream" id=8]
[ext_resource path="res://UI/LaughEffect.tscn" type="PackedScene" id=9]

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 80, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 80, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ SubResource( 17 ) ],
"loop": true,
"name": "Sit",
"speed": 5.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "Run",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=14]
radius = 12.0
height = 0.0

[sub_resource type="Animation" id=15]
resource_name = "Idle"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Idle" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="Animation" id=16]
resource_name = "Run"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Run" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="Animation" id=19]
resource_name = "Sit"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Sit" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 3 )

[node name="Shadow" type="Sprite" parent="."]
position = Vector2( 0, 8 )
texture = ExtResource( 7 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -9 )
scale = Vector2( 3, 3 )
frames = SubResource( 13 )
animation = "Idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 14 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 15 )
anims/Run = SubResource( 16 )
anims/Sit = SubResource( 19 )

[node name="FootStepTimer" type="Timer" parent="."]
one_shot = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
bus = "SFX"

[node name="Laugh" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
bus = "SFX"

[node name="interectE" type="Label" parent="."]
margin_left = -45.0
margin_top = -27.0
margin_right = 43.0
margin_bottom = -13.0

[node name="interecttoSit" type="Label" parent="."]
margin_left = -45.0
margin_top = -27.0
margin_right = 43.0
margin_bottom = -13.0

[node name="LaughEffect" parent="." instance=ExtResource( 9 )]
position = Vector2( 0, -32 )

[node name="Weapons" type="Node2D" parent="."]

[node name="Knife" parent="Weapons" instance=ExtResource( 5 )]
visible = false

[node name="Axe" parent="Weapons" instance=ExtResource( 4 )]
visible = false
